--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class = "nested-grid-container">
             <div class="header">
                 <h1>Header of grid layout website</h1>
-                <h3>CSS Grid Layout Website</h3>
+                <h3>Deployment Projects</h3>
             </div>
             <div class="aside">
                 <div class="about">
